--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,91 +1,93 @@
 html {
-	background-image: url(../images/double-bubble-outline.jpg)
+    background-image: url(../images/double-bubble-outline.jpg)
 }
 
 .image-header {
-	background-image: url(../images/DNA.jpg);
-	height: 100px;
-	background-size: cover
+    background-image: url(../images/DNA.jpg);
+    height: 100px;
+    background-size: cover
 }
 
 #version {
-	color: #fff
+    color: #fff
 }
 
 .topper {
-	margin-top: 3.3em
+    margin-top: 3.3em
 }
 
 .breadcrumb a:link {
-	color: blue;
-	text-decoration: none
+    color: blue;
+    text-decoration: none
 }
 
 .breadcrumb a:hover {
-	color: #8b0000;
-	text-decoration: underline;
-	text-decoration: none
+    color: #8b0000;
+    text-decoration: underline;
+    text-decoration: none
 }
 
 .rounded-border {
-	border: 1px solid #ccc!important;
-	padding: 8px;
-	border-radius: 10px!important;
+    border: 1px solid #ccc !important;
+    padding: 8px;
+    border-radius: 10px !important;
 }
 
 .fit {
-	width: 60%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .fit2 {
-	width: 95%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto
+    width: 95%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .fit3 {
-	width: 100%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .linerow {
-	display: table;
-	width: 100%
+    display: table;
+    width: 100%
 }
 
 .linecolumn {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle
 }
 
 :target {
-	padding-top: 75px
+    padding-top: 75px
 }
 
 .container-fluid {
-	margin-left: 1em;
-	margin-right: 1em
+    margin-left: 1em;
+    margin-right: 1em
 }
 
 .container-wrap {
-	overflow: hidden;
-	overflow-x: scroll;
-	-webkit-backface-visibility: hidden;
-	-webkit-perspective: 1000;
-	-webkit-overflow-scrolling: touch;
-	text-align: justify
+    overflow: hidden;
+    overflow-x: scroll;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -webkit-overflow-scrolling: touch;
+    text-align: justify
 }
-.footnotes-sep{
+
+.footnotes-sep {
     display: none;
 }
 
-&::-webkit-scrollbar {
-	display: none
+&
+::-webkit-scrollbar {
+    display: none
 }
