--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -159,7 +159,7 @@
 
                     <td>
                         {% if "unclassified" in record.family: %}
-                        <a href="{{ url_for('family', family_id = record.family.split('-', 1)[0]) }}">{{ record.family }}</a>
+                            <a href="{{ url_for('family', family_id = record.family.split('-', 1)[0]) }}">{{ record.family }}</a>
                         {% elif "_" in record.family: %}
                             <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
                         {% else %}
@@ -178,9 +178,10 @@
                     <td>
                         <a href="{{ url_for('detail',mode='swiss', unid = record.uniq_id) }}" target="_blank">view</a>
                     </td>
-                    <td>>{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}&#10;{{ record.seq }</td>
-                    <td>
-                        <p>{{ record.type }}</p>
+                    <td>>{{ record.uniq_id }} {{ record.protein_enzyme }}
+                        OS={{ record.strain }}&#10;{{ record.seq }</td>
+                                <td>
+                                <p>{{ record.type }}</p>
                     </td>
                     <td>{{ record.lineage }}</td>
                 </tr>
