--- a/templates/uhgp_cluster.html
+++ b/templates/uhgp_cluster.html
@@ -68,7 +68,11 @@
                     <td>{{ record.name }}</td>
                     <td>
                         {% for pfam in pfam_dic[record.number] %}
+                            {% if pfam[0]=="Not Detected" %}
+                            {{ pfam[0] }}
+                            {% else %}
                             <a href="{{ pfam[1] }}" rel="noopener noreferrer" target="_blank">{{ pfam[0] }}</a>
+                            {% endif %}
                         {% endfor %}
                     </td>
                     <td>{{ record.type }}</td>
