--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -48,7 +48,7 @@
                     <a class="nav-link" href="{{ url_for('statistics') }}">Statistics</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('statistics') }}">Taxonomy</a>
+                    <a class="nav-link" href="{{ url_for('taxonomy') }}">Taxonomy</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('download') }}">Download</a>
