Update from bo Aug10

--- a/templates/uhgp.html
+++ b/templates/uhgp.html
@@ -12,7 +12,7 @@
     </div>
     <div class="familyList">
         <h2>
-            UHGP Hits
+            PUP homologs from UHGP
         </h2>
         <ul class="breadcrumb" style="font-size: medium">
             <li><a href="{{ url_for('uhgp', name_id = 'Africa') }}">Africa</a> <span
