--- a/templates/uhgp_cluster.html
+++ b/templates/uhgp_cluster.html
@@ -78,14 +78,18 @@
                     </td>
                     <td>
                         {% for substrate in substrate_pairs[record.number] %}
+                            {% if substrate[1] =="Not Detected" %}
+                            {{ substrate[0] }}
+                            {% else %}
                             <a href="{{ substrate[1] }}" > {{ substrate[0] }}</a>
+                            {% endif %}
                         {% endfor %}
                     </td>
                     <td>{{ record.type }}</td>
                     <td>{{ record.continent }}</td>
                     <td><a href="{{ url_for('detail',mode='cluster', unid = record.gene_id) }}" target="_blank">view</a>
                     </td>
-                    <td>>{{ record.gene_id }}}&#10;{{ record.seq }}</td>
+                    <td>>{{ record.gene_id }}&#10;{{ record.seq }}</td>
                 {% endfor %}
                 </tbody>
             </table>
