--- a/templates/characterized.html
+++ b/templates/characterized.html
@@ -77,8 +77,8 @@
                 <tr>
                     <td>{{ record.number }}</td>
                     <td>
-                        {% if "unclassified" in record.family: %}
-                            <a href="{{ url_for('family', family_id = record.family.split('-', 1)[0]) }}">{{ record.family }}</a>
+                        {% if "unclassified" in record.family %}
+                            {{ record.family }}
                         {% elif "_" in record.family: %}
                             <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
                         {% else %}
