--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -154,7 +154,7 @@
 
                     <td>
                         {% if "unclassified" in record.family: %}
-                            <a href="{{ url_for('family', family_id = record.family.split('-', 1)[0]) }}">{{ record.family }}</a>
+                            {{ record.family }}
                         {% elif "_" in record.family: %}
                             <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
                         {% else %}
