--- a/templates/uhgp_cluster.html
+++ b/templates/uhgp_cluster.html
@@ -80,6 +80,8 @@
                         {% for substrate in substrate_pairs[record.number] %}
                             {% if substrate[1] =="Not Detected" %}
                             {{ substrate[0] }}
+                            {% elif substrate[1] =="NA" %}
+                            {{ substrate[0] }}
                             {% else %}
                             <a href="{{ substrate[1] }}" > {{ substrate[0] }}</a>
                             {% endif %}
