--- a/templates/characterized.html
+++ b/templates/characterized.html
@@ -90,6 +90,9 @@
                     <td>{{ record.protein_name }}</td>
                     <td>
                         {% for pfam in pfam_dic[record.number -1] %}
+                            {% if pfam[0] == "Not detected" %}
+                            {{ pfam[0] }}
+                            {% else %}
                             <a href="{{ pfam[1] }}" rel="noopener noreferrer" target="_blank">{{ pfam[0] }}</a>
                         {% endfor %}
                     </td>
