--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -173,8 +173,9 @@
                     <td>
                         <a href="{{ url_for('detail',mode='swiss', unid = record.uniq_id) }}" target="_blank">view</a>
                     </td>
-                    <td>>{{ record.uniq_id }} {{ record.protein_enzyme }}
-                        OS={{ record.strain }}&#10;{{ record.seq }}</td>
+                    <td>
+                        >{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}&#10;{{ record.seq }}
+                    </td>
                     <td>
                         <p>{{ record.type }}</p>
                     </td>
