--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -180,8 +180,10 @@
                     <td>
                         <a href="{{ url_for('detail',mode='trembl', unid = record.uniq_id) }}" target="_blank">view</a>
                     </td>
-                    <td>>{{ record.uniq_id }} {{ record.protein_enzyme }}
-                        OS={{ record.strain }}&#10;{{ record.seq }}</td>
+                    <td>
+                        >{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}&#10;{{ record.seq }}
+                    </td>
+                        
                     <td>
                         <p>{{ record.type }}</p>
                     </td>
