--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -47,6 +47,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('statistics') }}">Statistics</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('polyphenol') }}">Polyphenol</a>
+                </li>
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
