--- a/templates/_head.html
+++ b/templates/_head.html
@@ -20,10 +20,8 @@
           integrity="sha512-Dop/vW3iOtayerlYAqCgkVr2aTr2ErwwTYOvRFUpzl2VhCMJyjQF0Q9TjUXIo6JhuM/3i0vVEt2e/7QQmnHQqw=="
           rel="stylesheet"/>
 
-    <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.10.25/b-1.7.1/b-html5-1.7.1/sl-1.3.3/datatables.min.css"/>
-    <script type="text/javascript"
-            src="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.10.25/b-1.7.1/b-html5-1.7.1/sl-1.3.3/datatables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-html5-2.0.1/sp-1.4.0/sl-1.3.3/datatables.min.css"/>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-html5-2.0.1/sp-1.4.0/sl-1.3.3/datatables.min.js"></script>
 
 
     <script crossorigin="anonymous"
