--- a/templates/polyphenol.html
+++ b/templates/polyphenol.html
@@ -19,7 +19,7 @@
                 },
                 lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
                 "pageLength": -1,
-                dom: 'Bfrtip',
+                dom: 'PBfrtip',
                 buttons: [
                     'pageLength',
                     {
