--- a/templates/polyphenol.html
+++ b/templates/polyphenol.html
@@ -10,7 +10,7 @@
 
         </div>
     </div>
-
+    {{ content|safe }}
     <script defer type="text/javascript">
         $(document).ready(function () {
             $('#data-table').DataTable({
