--- a/templates/polyphenol.html
+++ b/templates/polyphenol.html
@@ -45,7 +45,7 @@
             <tbody>
             {% for record in records %}
                 <tr>
-                    <td><a href= {{record.pubchem }}">{{ record.Name }}</td>
+                    <td><a href= {{record.pubchem }}>{{ record.Name }}</td>
                     <td>{{ record.Polyphenol_class }}</td>
                     <td>{{ record.Polyphenol_sub_class }}</td>
                     <td>
